--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "CB",
   "name": "ColorBucket",
+   "orientation": "portrait"
   "icons": [
     {
       "src": "icon/192x192.png",
