--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,29 @@
   "name": "ColorBucket",
     "display": "fullscreen",
    "orientation": "portrait"
+  
   "icons": [
     {
-      "src": "icon/192x192.png",
-      "sizes": "192x192",
+      "src": "Image/48.png",
+      "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "icon/512x512.png",
+      "src": "Image/72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    }
+    {
+      "src": "Image/144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    {
+      "src": "Image/192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+{
+      "src": "Image/512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
